<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ListaAlunosActivity!</string>
    <string name="app_name">Agenda</string>
    <string name="name">Nome:</string>
    <string name="phone">Telefone:</string>
    <string name="address">Endereço:</string>
    <string name="site">Site:</string>
    <string name="imageDesc">Imagem do botão</string>
    <string name="insert">Inserir</string>
    <string name="sync">Sincronizar</string>
    <string name="map">Mapa</string>
    <string name="newItem">Novo</string>
    <string name="moreOptions">Mais opções</string>
    <string name="receive">Baixar provas</string>
    <string name="preferences">Preferências</string>
    <string name="typeName">Digite o seu nome aqui&#8230;</string>
    <string name="typePhone">Digite o seu telefone aqui&#8230;</string>
    <string name="typeAddress">Digite o seu endereço aqui&#8230;</string>
    <string name="typeSite">Digite o seu site aqui&#8230;</string>
    <string name="gallery">Galeria</string>

</resources>