<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/novo"
        android:icon="@drawable/novo"
        android:showAsAction="always"
        android:title="@string/newItem"/>
    <item
        android:id="@+id/mapa"
        android:icon="@drawable/mapa"
        android:showAsAction="always"
        android:title="@string/map"/>
    <item
        android:icon="@drawable/smile"
        android:showAsAction="always"
        android:title="@string/moreOptions">
        <menu>
            <item
                android:id="@+id/enviar_alunos"
                android:icon="@drawable/planeta"
                android:showAsAction="always"
                android:title="@string/sync"/>
            <item
                android:id="@+id/receber_provas"
                android:icon="@drawable/dial"
                android:showAsAction="always"
                android:title="@string/receive"/>
            <item
                android:id="@+id/preferencias"
                android:icon="@drawable/musica"
                android:showAsAction="always"
                android:title="@string/preferences"/>
        </menu>
    </item>

</menu>