<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <ImageButton
	        android:id="@+id/imagem"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/ic_launcher" 
	        android:contentDescription="@string/imageDesc"/>
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/name" />
	
	    <EditText
	        android:id="@+id/nome"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phone" />
	
	    <EditText
	        android:id="@+id/telefone"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/address" />
	
	    <EditText
	        android:id="@+id/endereco"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" />
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/site" />
	
	    <EditText
	        android:id="@+id/site"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" />
	    
	    <SeekBar android:id="@+id/nota"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:max="10"/>
	
	    <Button
	        android:id="@+id/botao"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/insert" />
	
	</LinearLayout>

</ScrollView>